<?xml version="1.0"?>
<package format="3">
  <name>midi_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="idilaraozmen@gmail.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>rclcpp</build_depend>
  <build_depend>nav2_costmap_2d</build_depend>
  <build_depend>nav2_amcl</build_depend>
  <build_depend>nav2_bt_navigator</build_depend>
  <build_depend>nav2_controller</build_depend>
  <build_depend>nav2_lifecycle_manager</build_depend>
  <build_depend>nav2_localization</build_depend>
  <build_depend>nav2_map_server</build_depend>
  <build_depend>nav2_planner</build_depend>
  <build_depend>nav2_recoveries</build_depend>
  <build_depend>nav2_waypoint_follower</build_depend>
  <build_depend>nav2_core</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_localization</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_recoveries</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_core</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
